--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.secondaryBtn {
+  @apply border border-slate-700 text-[#262840] text-[16px] p-2.5 rounded-lg hover:!text-white hover:bg-gradient-to-r hover:from-[#4745D0] hover:to-[#2A27C9] hover:border-[#2A27C9] duration-500;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.primaryBtn {
+  @apply shadow-lg bg-gradient-to-r from-[#4745D0] to-[#2A27C9] text-white p-2.5 rounded-lg text-[16px] hover:text-slate-300 duration-500;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.latestCard {
+  @apply p-5 !min-w-[448px] !h-[767px] border-color-dark90 border rounded-2xl flex flex-col justify-center gap-[1.344rem];
 }
